Fixed dark mode text colors.

--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -6,6 +6,10 @@
    --panel-1-color: rgba(255, 255, 255, 0.83);
    --panel-2-color: rgba(255, 255, 255, 0.83);
    --panel-3-color: rgba(255, 255, 255, 0.83);
+   --color-text-dark-primary: rgba(255, 255, 255, 0.83);
+   --color-text-dark-secondary: rgba(255, 255, 255, 0.83);
+   --color-text-dark-header: rgba(255, 255, 255, 0.83);
+   --color-text-dark-inactive: rgba(255, 255, 255, 0.83);
    --color-border-highlight: rgba(255, 255, 255, 0.83);
 
    // Input styling
